@@ -1,4 +1,4 @@
-<?xml version="1.0" standalone="no" ?>
+<?xml version="1.0" ?>
 <!DOCTYPE ruler >
 
 <ep:ruler
